<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DayFragment">



    <androidx.cardview.widget.CardView
        android:id="@+id/cd_day"
        android:layout_width="320dp"
        android:layout_height="142dp"
        app:cardBackgroundColor="#F6F6F3"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textSize="12sp"
                android:textColor="#888888"
                android:layout_marginStart="14dp"
                android:textFontWeight="400"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:layout_marginTop="13dp"
                android:textSize="20sp"
                android:textFontWeight="600"
                app:layout_constraintStart_toStartOf="@+id/date_today"
                app:layout_constraintTop_toBottomOf="@+id/date_today" />

            <TextView
                android:id="@+id/step_per_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps_days"
                android:textSize="12sp"
                android:fontFamily="@font/open_sans_bold"
                android:textFontWeight="600"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@+id/steps"
                app:layout_constraintBottom_toBottomOf="@+id/steps" />

            <TextView
                android:id="@+id/average_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_km"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:textColor="#888888"
                android:textFontWeight="400"
                app:layout_constraintStart_toStartOf="@+id/steps"
                app:layout_constraintTop_toBottomOf="@+id/steps" />

            <TextView
                android:id="@+id/avg_km_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_km_value"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="#383838"
                android:textSize="12sp"
                android:layout_marginStart="6dp"
                android:textFontWeight="600"
                app:layout_constraintStart_toEndOf="@+id/average_km"
                app:layout_constraintBottom_toBottomOf="@+id/average_km" />

            <TextView
                android:id="@+id/calories_burnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_burnt"
                android:layout_marginTop="83dp"
                android:layout_marginEnd="70dp"
                android:textSize="12sp"
                android:textColor="#888888"
                android:textFontWeight="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calories_burnt_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/calories_burnt_value"
                android:textColor="#383838"
                android:textSize="12sp"
                android:textFontWeight="600"
                app:layout_constraintBottom_toBottomOf="@+id/calories_burnt"
                app:layout_constraintStart_toEndOf="@+id/calories_burnt" />

            <TextView
                android:id="@+id/total_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_steps"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:textColor="#888888"
                android:textFontWeight="400"
                app:layout_constraintStart_toStartOf="@+id/average_km"
                app:layout_constraintTop_toBottomOf="@+id/average_km" />

            <TextView
                android:id="@+id/total_step_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_steps_value"
                android:fontFamily="@font/open_sans_bold"
                android:textColor="#383838"
                android:textSize="12sp"
                android:textFontWeight="600"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@+id/total_steps"
                app:layout_constraintBottom_toBottomOf="@+id/total_steps" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>