<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_flag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:src="@drawable/bg_flag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bg_logo"
            android:layout_width="237dp"
            android:layout_height="31dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/id_title"
            android:layout_width="282dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#383838"
            android:textFontWeight="400"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bg_logo"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/id_name"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="Name"
            android:fontFamily="@font/open_sans"
            android:text="@string/name"
            android:textColor="#383838"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/id_title"
            app:layout_constraintTop_toBottomOf="@id/id_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_text_input_layout1"
            android:layout_width="309dp"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_border"
            app:layout_constraintStart_toStartOf="@id/id_name"
            app:layout_constraintTop_toBottomOf="@id/id_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_name"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_last_name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/last_name"
            android:textColor="#383838"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/id_text_input_layout1"
            app:layout_constraintTop_toBottomOf="@id/id_text_input_layout1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_text_input_layout2"
            android:layout_width="309dp"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_border"
            app:layout_constraintStart_toStartOf="@id/id_last_name"
            app:layout_constraintTop_toBottomOf="@id/id_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_last_name"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_email_sign"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="Email Sign In"
            android:fontFamily="@font/open_sans"
            android:text="@string/email_id"
            android:textColor="#383838"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/id_text_input_layout2"
            app:layout_constraintTop_toBottomOf="@id/id_text_input_layout2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_text_input_layout3"
            android:layout_width="309dp"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_border"
            app:layout_constraintStart_toStartOf="@id/id_email_sign"
            app:layout_constraintTop_toBottomOf="@id/id_email_sign">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/youremail_email_com"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_password_sign"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/password_svz"
            android:textColor="#383838"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@id/id_text_input_layout3"
            app:layout_constraintTop_toBottomOf="@id/id_text_input_layout3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_text_input_layout4"
            android:layout_width="309dp"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_border"
            app:layout_constraintStart_toStartOf="@id/id_password_sign"
            app:layout_constraintTop_toBottomOf="@id/id_password_sign">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_password"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_Dob"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:text="DOB*"
            android:textColor="#383838"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/id_text_input_layout4"
            app:layout_constraintTop_toBottomOf="@id/id_text_input_layout4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_text_input_layout5"
            android:layout_width="309dp"
            android:layout_height="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_border"
            app:layout_constraintStart_toStartOf="@id/id_Dob"
            app:layout_constraintTop_toBottomOf="@id/id_Dob">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/ic_calendar"
                android:drawablePadding="10dp"
                android:paddingLeft="30dp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/id_daily_step_goal"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:text="Set your daily step goal*"
            android:textColor="#383838"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/id_text_input_layout5"
            app:layout_constraintTop_toBottomOf="@id/id_text_input_layout5" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slideBar"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:stepSize="500"
            android:valueFrom="500"
            android:valueTo="10000"
            app:labelStyle="@style/Widget.App.Tooltip"
            app:layout_constraintStart_toStartOf="@id/id_daily_step_goal"
            app:layout_constraintTop_toBottomOf="@id/id_daily_step_goal"
            app:thumbColor="@color/Primary_Color"
            app:tickVisible="false"
            app:haloColor="@color/Primary_Color"
            app:trackColorActive="@color/Primary_Color"
            app:trackColorInactive="@color/Secondary_color" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:background="@drawable/shape"
            android:backgroundTint="#90C44E"
            android:text="Sign Up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/slideBar"
            app:layout_constraintStart_toStartOf="@id/slideBar"
            app:layout_constraintTop_toBottomOf="@id/slideBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>